--- a/code/SVM.ipynb
+++ b/code/SVM.ipynb
@@ -4,376 +4,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "QnTHP-ZFaoPO"
-      },
-      "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "import warnings\n",
-        "import numpy as np\n",
-        "import re\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "\n",
-        "seed = 10\n",
-        "\n",
-        "def get_dataset():\n",
-        "\n",
-        "    featureset_path = \"/content/train_features.csv\"\n",
-        "    targetset_path = \"/content/train_targets.csv\"\n",
-        "\n",
-        "    df = pd.read_csv(featureset_path)\n",
-        "    target = pd.read_csv(targetset_path)\n",
-        "\n",
-        "    #print(\"Features: \",df.columns,\"\\n\")\n",
-        "    #print(\"Target Columns: \",target.columns,\"\\n\")\n",
-        "\n",
-        "    column_to_drop = [\"lobby_type\",\"chat_len\",\"game_mode\",\"match_id_hash\"] # \"match_id_hash\",\"objectives_len\"\n",
-        "\n",
-        "    filter = \"(game_mode == 2 or game_mode == 22) and game_time > 0\" # 2 standard ranked or 22 captain mode\n",
-        "\n",
-        "    df = df.query(filter)\n",
-        "\n",
-        "    df = df.drop(labels=column_to_drop,axis=1)\n",
-        "\n",
-        "    tf_toreplace = [\"r1_teamfight_participation\",\n",
-        "                    \"r2_teamfight_participation\",\n",
-        "                    \"r3_teamfight_participation\",\n",
-        "                    \"r4_teamfight_participation\",\n",
-        "                    \"r5_teamfight_participation\",\n",
-        "                    \"d1_teamfight_participation\",\n",
-        "                    \"d2_teamfight_participation\",\n",
-        "                    \"d3_teamfight_participation\",\n",
-        "                    \"d4_teamfight_participation\",\n",
-        "                    \"d5_teamfight_participation\"]\n",
-        "\n",
-        "    for label in tf_toreplace:\n",
-        "        df.loc[df[label] > 1.0, label] = 1\n",
-        "\n",
-        "\n",
-        "    print(\"Filtering Df: \", filter, \"\\n\")\n",
-        "\n",
-        "    print(\"Dropped: \",column_to_drop,\"\\n\")\n",
-        "\n",
-        "    print(\"Dataframe Shape: \",df.shape,\"\\n\")\n",
-        "\n",
-        "    target = target.loc[df.index]\n",
-        "    print(f\"Target shape: {target.shape}\")\n",
-        "    return df,target\n",
-        "\n",
-        "\n",
-        "def get_hero_id_labels(df: pd.DataFrame) -> list[str]:\n",
-        "    hero_id_labels = [s for s in df.columns if s.endswith('_hero_id')]\n",
-        "    print(\"Hero Id Labels:\",hero_id_labels,\"\\n\")\n",
-        "    return hero_id_labels\n",
-        "\n",
-        "def get_single_hero_labels(df: pd.DataFrame) -> list[str]:\n",
-        "    single_hero_labels = [s for s in df.columns if re.match(r\"^(d|r)\\d\",s)]\n",
-        "    print(\"Single Player Labels:\",single_hero_labels,\"\\n\")\n",
-        "    return single_hero_labels\n",
-        "\n",
-        "def drop_heros_labels(df:pd.DataFrame) -> pd.DataFrame:\n",
-        "    hero_id_labels = get_hero_id_labels(df)\n",
-        "    if (len(hero_id_labels) == 0):\n",
-        "        for label in df.columns:\n",
-        "            if re.match(r\"^(d|r)_\\d+$\", label):  #regex: r_1 d_2 r_124 etc...\n",
-        "                df = df.drop(label,axis=1)\n",
-        "            elif re.match(r\"^(d|r)\\d_heroid\\d+$\",label):      #regex: r1_hero_id_12 d3_hero_id_101 ecc..\n",
-        "                df = df.drop(label,axis=1)\n",
-        "    else:\n",
-        "        df = df.drop(labels=hero_id_labels,axis=1)\n",
-        "\n",
-        "    print(\"Dropped Dataframe Shape:\",df.shape)\n",
-        "\n",
-        "    return df\n",
-        "\n",
-        "\n",
-        "def playerstats_playerheros_transform(df: pd.DataFrame):\n",
-        "\n",
-        "    features_toonehot = [\"r1_hero_id\",\n",
-        "                         \"r2_hero_id\",\n",
-        "                         \"r3_hero_id\",\n",
-        "                         \"r4_hero_id\",\n",
-        "                         \"r5_hero_id\",\n",
-        "                         \"d1_hero_id\",\n",
-        "                         \"d2_hero_id\",\n",
-        "                         \"d3_hero_id\",\n",
-        "                         \"d4_hero_id\",\n",
-        "                         \"d5_hero_id\"]\n",
-        "    df = pd.get_dummies(df,columns=features_toonehot)\n",
-        "\n",
-        "    #target = target.loc[df.index]\n",
-        "    #print(target.shape)\n",
-        "    #df = df.drop('match_id_hash',axis=1)\n",
-        "\n",
-        "    return df\n",
-        "\n",
-        "def playerstats_teamheros_transform(df: pd.DataFrame):\n",
-        "    warnings.simplefilter(action='ignore', category=pd.errors.PerformanceWarning)\n",
-        "    hero_id_labels = get_hero_id_labels(df)\n",
-        "\n",
-        "    hero_id_set = {i: set() for i in range(len(hero_id_labels))}\n",
-        "\n",
-        "    hero_id_set_tot = set()\n",
-        "\n",
-        "    for n,label in enumerate(hero_id_labels):\n",
-        "        for id in df[label]:\n",
-        "            hero_id_set[n].add(id)\n",
-        "\n",
-        "    for i in range(len(hero_id_labels)):\n",
-        "        #print(f\"{i}. {len(hero_id_set[i])}\")\n",
-        "        hero_id_set_tot = hero_id_set_tot.union(hero_id_set[i])\n",
-        "\n",
-        "    print(\"Numbers of Heros: \",len(hero_id_set_tot),\"\\n\")\n",
-        "\n",
-        "    for hero_id in hero_id_set_tot:\n",
-        "        df[f\"r_{hero_id}\"] = 0\n",
-        "        df[f\"r_{hero_id}\"] = (\n",
-        "            (df[\"r1_hero_id\"] == hero_id) |\n",
-        "            (df[\"r2_hero_id\"] == hero_id) |\n",
-        "            (df[\"r3_hero_id\"] == hero_id) |\n",
-        "            (df[\"r4_hero_id\"] == hero_id) |\n",
-        "            (df[\"r5_hero_id\"] == hero_id)\n",
-        "        ).astype(int)\n",
-        "        df[f\"d_{hero_id}\"] = (\n",
-        "            (df[\"d1_hero_id\"] == hero_id) |\n",
-        "            (df[\"d2_hero_id\"] == hero_id) |\n",
-        "            (df[\"d3_hero_id\"] == hero_id) |\n",
-        "            (df[\"d4_hero_id\"] == hero_id) |\n",
-        "            (df[\"d5_hero_id\"] == hero_id)\n",
-        "        ).astype(int)\n",
-        "\n",
-        "    df = df.drop(labels=hero_id_labels,axis=1) #removed ri_hero_id and di_hero_id\n",
-        "\n",
-        "    print(\"Dataframe Shape:\",df.shape,\"\\n\")\n",
-        "\n",
-        "    #print(df.iloc[0][\"match_id_hash\"])\n",
-        "    #print(df.iloc[0][df.iloc[0] == 1][-11:])\n",
-        "\n",
-        "    print(\"NaN Count: \",pd.isna(df).sum().sum(),\"\\n\")\n",
-        "\n",
-        "    df = df.copy()\n",
-        "\n",
-        "    \"\"\" i = 0\n",
-        "    for v in df['d_32']:\n",
-        "        if v == 1:\n",
-        "            i += 1\n",
-        "    print(f\"Total: {i}\") \"\"\"\n",
-        "\n",
-        "    #target = target.loc[df.index]\n",
-        "    #print(target.shape)\n",
-        "\n",
-        "\n",
-        "    return df\n",
-        "\n",
-        "def teamstats_teamheros_transform(df: pd.DataFrame):\n",
-        "    #we handle PerformanceWarning by doing the copy of the dataframe, this ignore is for quality of outputs\n",
-        "    warnings.simplefilter(action='ignore', category=pd.errors.PerformanceWarning)\n",
-        "    hero_id_labels = get_hero_id_labels(df)\n",
-        "\n",
-        "    hero_id_set = {i: set() for i in range(len(hero_id_labels))}\n",
-        "\n",
-        "    hero_id_set_tot = set()\n",
-        "\n",
-        "    for n,label in enumerate(hero_id_labels):\n",
-        "        for id in df[label]:\n",
-        "            hero_id_set[n].add(id)\n",
-        "\n",
-        "    for i in range(len(hero_id_labels)):\n",
-        "        #print(f\"{i}. {len(hero_id_set[i])}\")\n",
-        "        hero_id_set_tot = hero_id_set_tot.union(hero_id_set[i])\n",
-        "\n",
-        "    print(\"Numbers of Heros: \",len(hero_id_set_tot),\"\\n\")\n",
-        "\n",
-        "    for hero_id in hero_id_set_tot:\n",
-        "        df[f\"r_{hero_id}\"] = (\n",
-        "            (df[\"r1_hero_id\"] == hero_id) |\n",
-        "            (df[\"r2_hero_id\"] == hero_id) |\n",
-        "            (df[\"r3_hero_id\"] == hero_id) |\n",
-        "            (df[\"r4_hero_id\"] == hero_id) |\n",
-        "            (df[\"r5_hero_id\"] == hero_id)\n",
-        "        ).astype(int)\n",
-        "        df[f\"d_{hero_id}\"] = (\n",
-        "            (df[\"d1_hero_id\"] == hero_id) |\n",
-        "            (df[\"d2_hero_id\"] == hero_id) |\n",
-        "            (df[\"d3_hero_id\"] == hero_id) |\n",
-        "            (df[\"d4_hero_id\"] == hero_id) |\n",
-        "            (df[\"d5_hero_id\"] == hero_id)\n",
-        "        ).astype(int)\n",
-        "\n",
-        "    df = df.drop(labels=hero_id_labels,axis=1) #removed ri_hero_id and di_hero_id\n",
-        "\n",
-        "    #print(\"Dataframe Shape:\",df.shape,\"\\n\")\n",
-        "\n",
-        "    #print(df.iloc[0][\"match_id_hash\"])\n",
-        "    #print(df.iloc[0][df.iloc[0] == 1][-11:])\n",
-        "\n",
-        "    print(\"NaN Count: \",pd.isna(df).sum().sum(),\"\\n\")\n",
-        "\n",
-        "    df = df.copy()\n",
-        "\n",
-        "    \"\"\" i = 0\n",
-        "    for v in df['d_32']:\n",
-        "        if v == 1:\n",
-        "            i += 1\n",
-        "    print(f\"Total: {i}\") \"\"\"\n",
-        "\n",
-        "    single_hero_labels = get_single_hero_labels(df)\n",
-        "    single_hero_labels2 = single_hero_labels.copy()\n",
-        "    for label in single_hero_labels:\n",
-        "        if re.match(r\".*(_x|_y)$\",label):\n",
-        "            single_hero_labels2.remove(label)\n",
-        "            continue\n",
-        "        new_label = label[0]+label[2:] #r1_gold -> r_gold\n",
-        "        if not (new_label in df.columns):\n",
-        "            df[new_label] = df[label]\n",
-        "        else:\n",
-        "            df[new_label] += df[label]\n",
-        "    single_hero_labels = single_hero_labels2.copy()\n",
-        "    df = df.drop(labels=single_hero_labels,axis=1).copy()\n",
-        "    #print(\"New Dataframe Colums:\",df.columns,\"\\n\")\n",
-        "    print(\"New Dataframe Shape:\",df.shape,\"\\n\")\n",
-        "\n",
-        "    #print(df.query(\"d_firstblood_claimed == 0 and r_firstblood_claimed == 0\").shape)\n",
-        "\n",
-        "    #for label in df.columns:\n",
-        "    #    if re.match(r\"^(d|r)_\\d*$\",label): #regex to drop all d_numbers to drop heroes\n",
-        "    #        df = df.drop(label,axis=1)\n",
-        "    #print(df.shape)\n",
-        "\n",
-        "    #target = target.loc[df.index]\n",
-        "    #print(target.shape)\n",
-        "\n",
-        "\n",
-        "    return df\n",
-        "\n",
-        "def team_mean_position_transform (df: pd.DataFrame):\n",
-        "    labels_radiant_x = [\"r1_x\", \"r2_x\", \"r3_x\", \"r4_x\", \"r5_x\"]\n",
-        "    labels_radiant_y = [\"r1_y\", \"r2_y\", \"r3_y\", \"r4_y\", \"r5_y\"]\n",
-        "    labels_dire_x = [\"d1_x\", \"d2_x\", \"d3_x\", \"d4_x\", \"d5_x\"]\n",
-        "    labels_dire_y = [\"d1_y\", \"d2_y\", \"d3_y\", \"d4_y\", \"d5_y\"]\n",
-        "\n",
-        "    #calculate average x and y for Radiant team\n",
-        "    df['radiant_avg_x'] = df[labels_radiant_x].mean(axis=1)\n",
-        "    df['radiant_avg_y'] = df[labels_radiant_y].mean(axis=1)\n",
-        "\n",
-        "    #calculate average x and y for Dire team\n",
-        "    df['dire_avg_x'] = df[labels_dire_x].mean(axis=1)\n",
-        "    df['dire_avg_y'] = df[labels_dire_y].mean(axis=1)\n",
-        "\n",
-        "    #drop the original x and y columns\n",
-        "    df = df.drop(labels=labels_radiant_x + labels_radiant_y + labels_dire_x + labels_dire_y, axis=1)\n",
-        "\n",
-        "    return df\n",
-        "\n",
-        "def team_weighted_mean_position_transform(df: pd.DataFrame):\n",
-        "\n",
-        "    labels_radiant_x = [\"r1_x\", \"r2_x\", \"r3_x\", \"r4_x\", \"r5_x\"]\n",
-        "    labels_radiant_y = [\"r1_y\", \"r2_y\", \"r3_y\", \"r4_y\", \"r5_y\"]\n",
-        "    labels_dire_x = [\"d1_x\", \"d2_x\", \"d3_x\", \"d4_x\", \"d5_x\"]\n",
-        "    labels_dire_y = [\"d1_y\", \"d2_y\", \"d3_y\", \"d4_y\", \"d5_y\"]\n",
-        "\n",
-        "    df_Weighted = df.copy(deep=True)\n",
-        "    df_Weighted  = get_average_distances(df_Weighted)\n",
-        "\n",
-        "    distances_radiant = [\"distance_r1\", \"distance_r2\", \"distance_r3\", \"distance_r4\", \"distance_r5\"]\n",
-        "    distances_dire = [\"distance_d1\", \"distance_d2\", \"distance_d3\", \"distance_d4\", \"distance_d5\"]\n",
-        "\n",
-        "    # Replace zero distances with 1 to avoid division by zero, only relevant for specific case of all players in the same position\n",
-        "    df_Weighted[distances_radiant] = df_Weighted[distances_radiant].replace(0, 1)\n",
-        "    df_Weighted[distances_dire] = df_Weighted[distances_dire].replace(0, 1)\n",
-        "\n",
-        "    #calculate weights as the inverse of distances\n",
-        "    weights_radiant = 1 / df_Weighted[distances_radiant]\n",
-        "    weights_dire = 1 / df_Weighted[distances_dire]\n",
-        "\n",
-        "    df['radiant_Weighted_avg_x'] = 0\n",
-        "    df['radiant_Weighted_avg_y'] = 0\n",
-        "    df['dire_Weighted_avg_x'] = 0\n",
-        "    df['dire_Weighted_avg_y'] = 0\n",
-        "    for i in range(5):\n",
-        "        #calculate weighted average x and y for Radiant team\n",
-        "        df['radiant_Weighted_avg_x'] += df[labels_radiant_x[i]] * weights_radiant.iloc[:, i]\n",
-        "        df['radiant_Weighted_avg_y'] += df[labels_radiant_y[i]] * weights_radiant.iloc[:, i]\n",
-        "\n",
-        "        #calculate weighted average x and y for Dire team\n",
-        "        df['dire_Weighted_avg_x'] += df[labels_dire_x[i]] * weights_dire.iloc[:, i]\n",
-        "        df['dire_Weighted_avg_y'] += df[labels_dire_y[i]] * weights_dire.iloc[:, i]\n",
-        "\n",
-        "    #normalize by the sum of weights\n",
-        "    df['radiant_Weighted_avg_x'] /= weights_radiant.sum(axis=1)\n",
-        "    df['radiant_Weighted_avg_y'] /= weights_radiant.sum(axis=1)\n",
-        "    df['dire_Weighted_avg_x'] /= weights_dire.sum(axis=1)\n",
-        "    df['dire_Weighted_avg_y'] /= weights_dire.sum(axis=1)\n",
-        "\n",
-        "    #drop the original x and y columns\n",
-        "    df = df.drop(labels=labels_radiant_x + labels_radiant_y + labels_dire_x + labels_dire_y, axis=1)\n",
-        "    return df\n",
-        "\n",
-        "#this is ok, tested\n",
-        "def get_average_distances(df: pd.DataFrame):\n",
-        "    labels_radiant_x = [\"r1_x\", \"r2_x\", \"r3_x\", \"r4_x\", \"r5_x\"]\n",
-        "    labels_radiant_y = [\"r1_y\", \"r2_y\", \"r3_y\", \"r4_y\", \"r5_y\"]\n",
-        "    labels_dire_x = [\"d1_x\", \"d2_x\", \"d3_x\", \"d4_x\", \"d5_x\"]\n",
-        "    labels_dire_y = [\"d1_y\", \"d2_y\", \"d3_y\", \"d4_y\", \"d5_y\"]\n",
-        "\n",
-        "    radiant_distances = calculate_distances(df, labels_radiant_x, labels_radiant_y)\n",
-        "    dire_distances = calculate_distances(df, labels_dire_x, labels_dire_y)\n",
-        "\n",
-        "    for label in radiant_distances:\n",
-        "        truncated_label = label[:-2]\n",
-        "        df[f'distance_{truncated_label}'] = radiant_distances[label]\n",
-        "\n",
-        "    for label in dire_distances:\n",
-        "        truncated_label = label[:-2]\n",
-        "        df[f'distance_{truncated_label}'] = dire_distances[label]\n",
-        "\n",
-        "    return df\n",
-        "#this is ok, tested\n",
-        "def calculate_distances(df: pd.DataFrame, x_labels, y_labels):\n",
-        "    distances = {label: [] for label in x_labels}\n",
-        "    for i in range(len(x_labels)):\n",
-        "        for j in range(len(x_labels)):\n",
-        "            if i != j:\n",
-        "                dist = np.sqrt((df[x_labels[i]] - df[x_labels[j]])**2 + (df[y_labels[i]] - df[y_labels[j]])**2)\n",
-        "                distances[x_labels[i]].append(dist)\n",
-        "    return {label: np.mean(distances[label], axis=0) for label in distances}\n",
-        "\n",
-        "\n",
-        "def feature_selection_transform(df: pd.DataFrame,target: pd.DataFrame, threshold: float) -> pd.DataFrame:\n",
-        "    feature_selector = RandomForestClassifier(max_depth=10,random_state=seed)\n",
-        "\n",
-        "    feature_selector.fit(df,target)\n",
-        "\n",
-        "    feature_importance = {\n",
-        "        name: value\n",
-        "        for name,value in zip(feature_selector.feature_names_in_,feature_selector.feature_importances_)\n",
-        "    }\n",
-        "\n",
-        "    feature_importance = dict(reversed(sorted(feature_importance.items(), key=lambda item: item[1])))\n",
-        "    feature_names = list(feature_importance.keys())\n",
-        "\n",
-        "    n_selected_features = np.sum(np.array(list(feature_importance.values())) > threshold)\n",
-        "\n",
-        "    df_reduced = df[feature_names[:n_selected_features]]\n",
-        "    print(\"Shape Tranformation:\\n\",df.shape,\"->\", df_reduced.shape)\n",
-        "\n",
-        "    return df_reduced\n",
-        "\n",
-        "def pca_tranform(df:pd.DataFrame, variance_ratio:float):\n",
-        "\n",
-        "    scaler = StandardScaler()\n",
-        "\n",
-        "    pca = PCA(n_components=variance_ratio,random_state=42)\n",
-        "\n",
-        "    df_reduced = pca.fit_transform(scaler.fit_transform(df))\n",
-        "\n",
-        "    return df_reduced"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "2VDzU-_bbV3M"
       },
       "outputs": [],
@@ -381,6 +11,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.svm import SVC\n",
+        "from dataset_functions import *\n",
         "from sklearn.experimental import enable_halving_search_cv\n",
         "from sklearn.model_selection import GridSearchCV,StratifiedKFold, HalvingGridSearchCV\n",
         "from sklearn.decomposition import PCA\n",
@@ -2930,7 +2561,7 @@
         "id": "xYHzKchx5kFJ"
       },
       "source": [
-        "# F1 of the best forming model"
+        "# F1 of the best performing model"
       ]
     },
     {
