--- a/code/data.ipynb
+++ b/code/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>r1_level</th>\n",
+       "      <th>r2_level</th>\n",
+       "      <th>r3_level</th>\n",
+       "      <th>r4_level</th>\n",
+       "      <th>r5_level</th>\n",
+       "      <th>d1_level</th>\n",
+       "      <th>d2_level</th>\n",
+       "      <th>d3_level</th>\n",
+       "      <th>d4_level</th>\n",
+       "      <th>d5_level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>39675.000000</td>\n",
+       "      <td>39675.000000</td>\n",
+       "      <td>39675.000000</td>\n",
+       "      <td>39675.000000</td>\n",
+       "      <td>39675.000000</td>\n",
+       "      <td>39675.00000</td>\n",
+       "      <td>39675.000000</td>\n",
+       "      <td>39675.000000</td>\n",
+       "      <td>39675.000000</td>\n",
+       "      <td>39675.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>11.304398</td>\n",
+       "      <td>11.260113</td>\n",
+       "      <td>11.287108</td>\n",
+       "      <td>11.294720</td>\n",
+       "      <td>11.256484</td>\n",
+       "      <td>11.34707</td>\n",
+       "      <td>11.291317</td>\n",
+       "      <td>11.282773</td>\n",
+       "      <td>11.293938</td>\n",
+       "      <td>11.238513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.795845</td>\n",
+       "      <td>6.753347</td>\n",
+       "      <td>6.771463</td>\n",
+       "      <td>6.787566</td>\n",
+       "      <td>6.762724</td>\n",
+       "      <td>6.83988</td>\n",
+       "      <td>6.835508</td>\n",
+       "      <td>6.834401</td>\n",
+       "      <td>6.832899</td>\n",
+       "      <td>6.808209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.00000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.00000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.00000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.00000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           r1_level      r2_level      r3_level      r4_level      r5_level  \\\n",
+       "count  39675.000000  39675.000000  39675.000000  39675.000000  39675.000000   \n",
+       "mean      11.304398     11.260113     11.287108     11.294720     11.256484   \n",
+       "std        6.795845      6.753347      6.771463      6.787566      6.762724   \n",
+       "min        1.000000      1.000000      1.000000      1.000000      1.000000   \n",
+       "25%        5.000000      6.000000      5.000000      5.000000      5.000000   \n",
+       "50%       11.000000     11.000000     11.000000     11.000000     11.000000   \n",
+       "75%       16.000000     16.000000     16.000000     16.000000     16.000000   \n",
+       "max       25.000000     25.000000     25.000000     25.000000     25.000000   \n",
+       "\n",
+       "          d1_level      d2_level      d3_level      d4_level      d5_level  \n",
+       "count  39675.00000  39675.000000  39675.000000  39675.000000  39675.000000  \n",
+       "mean      11.34707     11.291317     11.282773     11.293938     11.238513  \n",
+       "std        6.83988      6.835508      6.834401      6.832899      6.808209  \n",
+       "min        1.00000      1.000000      1.000000      1.000000      1.000000  \n",
+       "25%        5.00000      5.000000      5.000000      5.000000      5.000000  \n",
+       "50%       11.00000     11.000000     11.000000     11.000000     11.000000  \n",
+       "75%       16.00000     16.000000     16.000000     16.000000     16.000000  \n",
+       "max       25.00000     25.000000     25.000000     25.000000     25.000000  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[col for col in df.columns if col.endswith(\"level\")]].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +691,7 @@
        "max     4933.000000      1.000000   5638.000000     5108.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
